Added: 1. Flyway migration 2. V1__init.sql script which added tables 3. In progress caching Security: csrf disabled